Remove some dependencies on Guava from the hk2.extensions package